feat(labels): create label route implement, chore(labels): swagger doc modified
